# Django_Mini_Project

./: .gitignore  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: issue-template.md
.github/workflows/: checks.yml
accounts/: models.py  tests.py
accounts/migrations/: 0001_initial.py  0002_alter_transactionhistory_account.py  0002_initial.py  0003_customuser_alter_account_user_transactionhistory.py
config/: settings.py
config/settings/: base.py
config/urls/: base.py
core/management/commands/: wait_for_db.py
transactions/: models.py  tests.py
transactions/migrations/: 0001_initial.py  0002_alter_transactionhistory_account.py
users/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_customuser_managers_customuser_is_admin_and_more.py
