[tool.poetry]
name = "django_mini_project"
version = "0.1.0"
description = "mini project with django"
authors = ["Your Name <you@example.com>"]
license = "open sources"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.7"
django = "^5.1.2"
djangorestframework = "^3.15.2"


[tool.poetry.group.dev.dependencies]
drf-spectacular = "^0.27.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
