[tool.poetry]
name = "django_mini_project"
version = "0.1.0"
description = "mini project with django"
authors = ["Your Name <you@example.com>"]
license = "open sources"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
djangorestframework = "^3.15.2"
psycopg-binary = "^3.2.3"
psycopg2-binary = "^2.9.10"
django = "^5.1.2"


[tool.poetry.group.dev.dependencies]
drf-spectacular = "^0.27.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
